AAdicionando animação no boss e tela final